--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "19.0.0-rc-2d2cc042-20240809",
+    "react-dom": "19.0.0-rc-2d2cc042-20240809"
   },
   "devDependencies": {
     "drizzle-kit": "^0.23.2",
