--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "drizzle-orm": "^0.32.2",
     "next": "14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "drizzle-kit": "^0.23.2",
