--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "next": "14.2.5",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
