--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_DATABASE_URL="postgresql://contenderdb_owner:JuXN4Aiolk8p@ep-hidden-star-a5jt4fqd.us-east-2.aws.neon.tech/contenderdb?sslmode=require"
-APP_ID="1849786"
-NEXT_PUBLIC_KEY="90e1272d5c773ab3a766"
-SECRET="ae5704c058b9cc025c2c"
-NEXT_PUBLIC_CLUSTER="us2"
+NEXT_PUBLIC_DATABASE_URL=postgresql://contenderdb_owner:JuXN4Aiolk8p@ep-hidden-star-a5jt4fqd.us-east-2.aws.neon.tech/contenderdb?sslmode=require
+APP_ID=1849786
+NEXT_PUBLIC_KEY=90e1272d5c773ab3a766
+SECRET=ae5704c058b9cc025c2c
+NEXT_PUBLIC_CLUSTER=us2
